fixed username wrap

--- a/src/app/dashboard/dashboard.scss
+++ b/src/app/dashboard/dashboard.scss
@@ -12,7 +12,10 @@ $top-row-height: calc(#{$dashboard-tile-width} + 0.5rem);
   grid-template-rows: $top-row-height repeat(4, minmax(90px, 1fr));
   grid-auto-flow: row;
   grid-row-gap: 0.5rem;
-
+  @media (max-width: $screen-md) {
+    grid-template-rows: auto repeat(4, minmax(70px, 1fr));
+  }
+  
   planet-dashboard-tile {
     overflow: hidden;
     padding: 0 2px;
@@ -50,9 +53,8 @@ $top-row-height: calc(#{$dashboard-tile-width} + 0.5rem);
         
         h1 {
           margin: 0;
-          white-space: nowrap;
-          overflow: hidden;
-          text-overflow: ellipsis;
+          white-space: normal;
+          word-wrap: break-word;
         }
         
         .mat-subheading-2 {
@@ -137,7 +139,6 @@ $top-row-height: calc(#{$dashboard-tile-width} + 0.5rem);
 .closebtn:hover {
   color: rgb(0, 0, 0);
 }
-
 
 @media (max-width: $screen-sm) {
   :host {
